# Template

./: .clang-format  CMakeLists.txt  README.md
.scripts/: taskfix.bat
